# mnimosyne

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
mnemosyne/: __init__.py  api.py  config.py  consolidator.html  database.py  embeddings.py  extraction.py  graph.py  graph_explorer.html  importer.html  llm.py  memories.html  memory.py  models.py  prompts.py  schema.sql  schemas.py  static.html
mnemosyne/evaluation/: __init__.py  harness.py  run_eval.py  test_cases.json
mnemosyne/retrieval/: __init__.py  builder.py  compressor.py  deduplicator.py  graph_retriever.py  memory_retriever.py  pipeline.py  planner.py  ranker.py  resolver.py  summarizer.py  wrapper.py
mnemosyne/services/: consolidation.py  graph_explorer.py  importer.py  openie.py  owner_compiler.py
tests/: test_consolidation.py  test_importer.py  test_memory.py  test_openie.py  test_owner.py  test_pipeline.py
