[project]
name = "mnemosyne"
version = "0.1.0"
description = "Persistent memory system for Large Language Models"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "sqlalchemy>=2.0.0",
    "google-genai>=1.0.0",
    "networkx>=3.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "numpy>=1.26.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
vec = ["sqlite-vec>=0.1.0"]
faiss = ["faiss-cpu>=1.8.0"]
local = ["sentence-transformers>=3.0.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[project.scripts]
mnemosyne = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
